# chespanish-api

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/routes/: auth.py  health.py
app/core/: __init__.py  config.py
app/schemas/: auth.py
app/services/: supabase_auth.py
docs/: api-boundary.md  architecture.md  auth-data-model.md  auth-endpoints.md  auth-runbook.md  firebase-data-model.md  project-architecture.md  testing-notes.md
supabase/: config.toml
supabase/migrations/: 20260625211500_create_profiles.sql
tests/: test_auth_routes.py  test_health.py
