[project]
name = "chespanish-api"
version = "0.1.0"
description = "FastAPI backend for Chespanish."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "email-validator>=2.3.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.10.0",
  "uvicorn[standard]>=0.35.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
